--- a/package.json
+++ b/package.json
@@ -6,14 +6,15 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
-    "react-scripts": "4.0.3",
-    "web-vitals": "^1.0.1",
     "node-sass": "4.14.1",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
+    "react-pdf": "^5.5.0",
     "react-reveal": "^1.2.2",
     "react-router": "^5.2.1",
-    "react-router-dom": "^5.3.0"
+    "react-router-dom": "^5.3.0",
+    "react-scripts": "4.0.3",
+    "web-vitals": "^1.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
